# lambda-go

./: LICENSE  README.md  go.cabal  lambda-go.cabal  stack.yaml
src/: Board.hs  Main.hs  Play.hs  Prior.hs  RuleSet.hs  Search.hs
test/: test-board.hs
