name:                go
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pierric/go#readme
license:             BSD3
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          example@example.com
copyright:           2017 Jiasen Wu
category:            AI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable go
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       RuleSet, Play, Board, Search, Prior
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers>=0.5, vector>=0.12,
                       rosezipper==0.2, mtl >= 2.2, lens >= 4.15, monad-logger >= 0.3.20,
                       mwc-random >= 0.13.3.0
  default-extensions:  TemplateHaskell, OverloadedStrings

test-suite board
  type:                exitcode-stdio-1.0
  main-is:             test-board.hs
  hs-source-dirs:      test, src
  other-modules:       Board
  build-depends:       hspec, QuickCheck, base >= 4.7 && < 5, vector>=0.12, lens >= 4.15, HUnit
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell, OverloadedStrings, StandaloneDeriving
  